<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">


       <TextView
           android:id="@+id/createAccount"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/createAccount"
           android:textColor="@color/dark_blue"
           android:textStyle="italic"
           android:textSize="30dp"
           android:layout_marginTop="80dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"

           />

        <EditText
           android:id="@+id/signup_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="100dp"
           android:layout_marginRight="30dp"
           android:background="@drawable/edit_text_round"
           android:drawableLeft="@drawable/ic_person"
           android:drawablePadding="8dp"
           android:hint="@string/editTextName"
           android:minHeight="48dp"
           android:padding="8dp"
           android:textColor="@color/dark_grey"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/createAccount" />


       <EditText
           android:id="@+id/signup_surname"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginRight="30dp"
           android:background="@drawable/edit_text_round"
           android:drawableStart="@drawable/ic_person"
           android:drawablePadding="8dp"
           android:hint="@string/editTextSurname"
           android:minHeight="48dp"
           android:padding="8dp"
           android:textColor="@color/dark_grey"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/signup_name" />

       <EditText
           android:id="@+id/signup_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginRight="30dp"
           android:background="@drawable/edit_text_round"
           android:drawableStart="@drawable/ic_email"
           android:drawablePadding="8dp"
           android:hint="@string/logEmail"
           android:minHeight="48dp"
           android:padding="8dp"
           android:textColor="@color/dark_grey"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/signup_surname" />



       <EditText
           android:id="@+id/signup_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@id/signup_email"
           android:layout_marginLeft="30dp"
           android:layout_marginTop="20dp"
           android:layout_marginRight="30dp"
           android:background="@drawable/edit_text_round"
           android:drawableStart="@drawable/ic_lock"
           android:drawablePadding="8dp"
           android:hint="@string/logPassword"
           android:minHeight="48dp"
           android:padding="8dp"
           android:textColor="@color/dark_grey"
           android:inputType="textPassword"
            />

            <Button
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/signupButton"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                app:cornerRadius = "30dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signup_password"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirect"
                android:text="@string/loginRedirectText"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/dark_blue"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toBottomOf="@id/signup_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                />

   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>