<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/logEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_round"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"

            android:hint="@string/logEmail"
            android:minHeight="48dp"
            android:padding="8dp"


            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"  />

        <EditText
            android:id="@+id/logPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_round"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:hint="@string/logPassword"
            android:minHeight="48dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/logEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textPassword"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
          />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/loginButton"
            android:textSize="18sp"
            app:cornerRadius = "30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logPassword"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:layout_marginLeft="70dp"
            android:backgroundTint="@color/dark_blue"/>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="20dp"


             />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="284dp"
            android:layout_height="234dp"
            android:src="@drawable/logo"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="-10dp"
            android:layout_marginTop="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>